# macos-ax-automation

./: .gitignore  CONTRIBUTING.md  README.md
axplorer/: README.md
axplorer/lib/AXplorer/: Package.resolved  Package.swift
axplorer/lib/AXplorer/Sources/AXplorer/: Action.swift  ActionHelper.swift  Capi.swift  Explorer.swift  ExplorerHelper.swift
axplorer/lib/AXplorer/Sources/AXplorer/Apps/: AppHelper.swift  ExcelHelper.swift
axplorer/lib/AXplorer/Tests/AXplorerTests/: AppHelperTests.swift  ExcelTests.swift  YAMLTests.swift
axplorer/py/: README.md  pyproject.toml
axplorer/py/examples/: README.md  __init__.py  excel.py  excel_llm.py  imovie.py  keyboard_test.py  test_excel_llm.py
axplorer/py/examples/models/: __init__.py  goal.py
axplorer/py/examples/states/: __init__.py  goal_executor.py  goal_state_machine.py  high_level_planner.py  step_executor.py
axplorer/py/examples/ui/: __init__.py  tkinter_window.py
axplorer/py/examples/utils/: __init__.py  llm_helper.py
axplorer/py/src/axplorer/: __init__.py  types.py
axplorer/py/src/axplorer/common/: yaml.py
axplorer/py/src/axplorer/macos/: action.py  explorer.py  lib.py  utils.py
axplorer/py/src/axplorer/macos/apps/: __init__.py  excel_helper.py
axplorer/py/tests/: test_yaml_filter.py
axplorer/scripts/: build.sh  dev-setup.sh
